.provarCaches/00D410000011HE0EAM/objects/rstk__obship__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_obship</customHelpPage>
    <description>obship__c; BOC</description>
    <fields>
        <fullName>rstk__customShipmentSequence__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Shipment Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__obship_div__r.rstk__sydiv_div__c + &apos;_&apos; + rstk__obship_shipmentid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__obship_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__obship_shipmentid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__obship_shipmentid__c + &apos; &apos; + rstk__obship_routetype__r.rstk__portetype_typeid__c + &apos; &apos; + rstk__obship_poroute__r.rstk__poroute_routeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actarrivaldate__c</fullName>
        <label>Destination Port ETA - Actual</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_actarrivaldate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actdepartdate__c</fullName>
        <label>Loading Date - Actual</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_actdepartdate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actduedate__c</fullName>
        <label>Actual Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actlocwhdate__c</fullName>
        <label>Actual Local Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actporteta__c</fullName>
        <label>Transit Port ETA – Actual</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_actporteta__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_actusportetd__c</fullName>
        <label>Origin Port ETD – Actual</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_actusportetd__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_bookingno__c</fullName>
        <label>Booking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Valid carrier from carrier master file.  Manually entered, not required.</inlineHelpText>
        <label>SSL/Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Inbound Shipment Master SupReq</relationshipLabel>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_class5122__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class 5.1 or Class 2.22</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_comments2__c</fullName>
        <label>Unloading Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>obship_ls1</fullName>
                </value>
                <value>
                    <fullName>obship_ls2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__obship_comments__c</fullName>
        <inlineHelpText>50 character free-form field.  User defined comments.</inlineHelpText>
        <label>Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_currduedate__c</fullName>
        <inlineHelpText>Current delivery date at final destination based on routing.  If Shipment Routing Locked in is checked, this field will reflect the current due date based on the routing.  Not required.</inlineHelpText>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_customscleared__c</fullName>
        <inlineHelpText>Date shipment cleared customs.  Manual entry, not required.</inlineHelpText>
        <label>Customs Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_datecalcreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Recalculation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_destaddress__c</fullName>
        <inlineHelpText>Outbound shipments only.  Address outbound shipment will be delivered to.  Only available if Outbound Shipment checkbox is checked.</inlineHelpText>
        <label>Destination Address (Outbound)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__obship_dgbookclosedate__c</fullName>
        <inlineHelpText>Date DG Booking must be completed.  Not required.</inlineHelpText>
        <label>DG Booking Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_docclosedate__c</fullName>
        <inlineHelpText>Date documentation for this shipment must be received from shipper.  Not required.</inlineHelpText>
        <label>Documentation Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_earlydate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Earliest Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_frtplanner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From table, the freight plannner responsible for this shipment.</inlineHelpText>
        <label>Freight Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_haulage__c</fullName>
        <label>Inland Haulage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Port to Port</fullName>
                </value>
                <value>
                    <fullName>Port to Door</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__obship_haulier__c</fullName>
        <label>Haulier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zenith</fullName>
                </value>
                <value>
                    <fullName>Gist</fullName>
                </value>
                <value>
                    <fullName>Other (Add Comment)</fullName>
                </value>
                <value>
                    <fullName>OEM Arranged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__obship_hauliercomment__c</fullName>
        <label>Comment</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_havebookcon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Booking Confirmation Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_master__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used when multiple shipments are scheduled for the same routing.  If checked, this record becomes a Master with no directly associated containers.  Parent shipments/containers are chosen from dropdown.</inlineHelpText>
        <label>Master Shipper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_masterobship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Shipment</label>
        <referenceTo>rstk__obship__c</referenceTo>
        <relationshipLabel>Outbound Shipments</relationshipLabel>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_needarrivaldate__c</fullName>
        <label>Destination Port ETA - Original</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_needarrivaldate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_needdepartdate__c</fullName>
        <label>Loading Date - Original</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_needdepartdate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_needporteta__c</fullName>
        <label>Transit Port ETA -  Original</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_needporteta__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_needusportetd__c</fullName>
        <label>Origin Port ETD -  Original</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_needusportetd__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_origduedate__c</fullName>
        <inlineHelpText>Original date shipment to be received based on routing.  If Shipment Route Locked In is checked, this will be the current Original Due Date from the routing.</inlineHelpText>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_planarrivaldate__c</fullName>
        <label>Destination Port ETA – Current</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_planarrivaldate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_plandepartdate__c</fullName>
        <label>Loading Date - Current</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_plandepartdate__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_planporteta__c</fullName>
        <label>Transit Port ETA- Current</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_planporteta__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_planusportetd__c</fullName>
        <label>Origin Port ETD – Current</label>
        <summarizedField>rstk__obshipstep__c.rstk__obshipstep_planusportetd__c</summarizedField>
        <summaryForeignKey>rstk__obshipstep__c.rstk__obshipstep_obship__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__obship_poroute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The route selected for this shipment from the Route Master file.</inlineHelpText>
        <label>Source Shipment Route</label>
        <referenceTo>rstk__poroute__c</referenceTo>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_portcutdate__c</fullName>
        <inlineHelpText>Manual entry.  Date container must be available to meet the intended ocean vessel.</inlineHelpText>
        <label>Port Cut Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_portrouting2__c</fullName>
        <label>Port Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>obship_pr1</fullName>
                </value>
                <value>
                    <fullName>obship_pr2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__obship_portrouting__c</fullName>
        <inlineHelpText>Port Routing information.  Manual entry, free-form, not required.</inlineHelpText>
        <label>Port Routing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__obship_poupdatedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POs Updated-To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_povend1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier 1</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Outbound Shipments</relationshipLabel>
        <relationshipName>obship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_povend2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier 2</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Outbound Shipments (Supplier 2)</relationshipLabel>
        <relationshipName>obship2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_povend3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier 3</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Outbound Shipments (Supplier 3)</relationshipLabel>
        <relationshipName>obship3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_priority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Currently for user information only.</inlineHelpText>
        <label>Priority Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_readyforpu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Ready for Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Defaults to checked once received date is entered in final routing step.</inlineHelpText>
        <label>Shipment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_routelock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, changes to the routing dates that would affect the requisition due dates will adjust the requisition dates.  If unchecked, routing changes will not affect requisition due dates.</inlineHelpText>
        <label>Shipment Route Locked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obship_routetype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid Route Type from Route Type master table.</inlineHelpText>
        <label>Route Type</label>
        <referenceTo>rstk__portetype__c</referenceTo>
        <relationshipName>obships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obship_serialno__c</fullName>
        <label>Container Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_shipmentid__c</fullName>
        <inlineHelpText>Unique identifier for this shipment.  Automatically added by the system but can be over-written.</inlineHelpText>
        <label>TMM Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obship_siclosedate__c</fullName>
        <inlineHelpText>Date by which Shipping Instructions must be received.  Not required.</inlineHelpText>
        <label>Shipping Instruction Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obship_termaddress__c</fullName>
        <inlineHelpText>Address of terminal for this shipment.  Manual entry, not required.</inlineHelpText>
        <label>Terminal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__obship_vessels__c</fullName>
        <inlineHelpText>Name of vessel or vessels being used for this shipment.  Manual entry, not required.</inlineHelpText>
        <label>Vessel Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__obship_wmsdirectrqst__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  If checked, this inbound shipment had originally be routed to a consolidation center, but WMS is requesting that it be shipped to them directly.</inlineHelpText>
        <label>Direct Ship Requested by WMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Outbound Shipment</label>
    <listViews>
        <fullName>rstk__Outbound_Shipment</fullName>
        <columns>NAME</columns>
        <columns>rstk__obship_div__c</columns>
        <columns>rstk__obship_shipmentid__c</columns>
        <columns>rstk__obship_routetype__c</columns>
        <columns>rstk__obship_masterobship__c</columns>
        <columns>rstk__obship_master__c</columns>
        <columns>rstk__obship_poroute__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__obship_carrier__c</columns>
        <columns>rstk__obship_termaddress__c</columns>
        <columns>rstk__obship_vessels__c</columns>
        <columns>rstk__obship_comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>Outbound Shipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Outbound_Shipments</fullName>
        <columns>NAME</columns>
        <columns>rstk__obship_div__c</columns>
        <columns>rstk__obship_shipmentid__c</columns>
        <columns>rstk__obship_routetype__c</columns>
        <columns>rstk__obship_poroute__c</columns>
        <columns>rstk__obship_bookingno__c</columns>
        <columns>rstk__obship_destaddress__c</columns>
        <columns>rstk__obship_master__c</columns>
        <columns>rstk__obship_masterobship__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Outbound Shipments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Outbound_Shipment</fullName>
        <columns>NAME</columns>
        <columns>rstk__obship_div__c</columns>
        <columns>rstk__obship_shipmentid__c</columns>
        <columns>rstk__obship_routetype__c</columns>
        <columns>rstk__obship_masterobship__c</columns>
        <columns>rstk__obship_master__c</columns>
        <columns>rstk__obship_poroute__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__obship_carrier__c</columns>
        <columns>rstk__obship_termaddress__c</columns>
        <columns>rstk__obship_vessels__c</columns>
        <columns>rstk__obship_comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>Outbound Shipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__bcc_Outbound_Shipment</fullName>
        <columns>rstk__customShipmentSequence__c</columns>
        <columns>NAME</columns>
        <columns>rstk__obship_portrouting__c</columns>
        <columns>rstk__obship_div__c</columns>
        <columns>rstk__obship_shipmentid__c</columns>
        <columns>rstk__obship_routetype__c</columns>
        <columns>rstk__obship_masterobship__c</columns>
        <columns>rstk__obship_master__c</columns>
        <columns>rstk__obship_povend1__c</columns>
        <columns>rstk__obship_poroute__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__obship_carrier__c</columns>
        <columns>rstk__obship_termaddress__c</columns>
        <columns>rstk__obship_vessels__c</columns>
        <columns>rstk__obship_comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>bccOutbound Shipment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_and_shipment_ID_cannot_change</fullName>
        <active>true</active>
        <description>Division and shipment ID cannot be changed.</description>
        <errorConditionFormula>OR( 
ISCHANGED(rstk__obship_div__c),
ISCHANGED(rstk__obship_shipmentid__c)
)</errorConditionFormula>
        <errorMessage>Division and shipment ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>